src/test/ui/nll/mir_check_cast_reify.stderr
warning: not reporting region error due to nll
  --> $DIR/mir_check_cast_reify.rs:36:25
   |
LL |     let f: fn(_) -> _ = foo;
   |                         ^^^

error: unsatisfied lifetime constraints
  --> $DIR/mir_check_cast_reify.rs:38:5
   |
LL | fn bar<'a>(x: &'a u32) -> &'static u32 {
   |        -- lifetime `'a` defined here
...
LL |     f(x)
   |     ^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to previous error

